# bot-axum-rs

./: .gitignore  Cargo.toml  README.md  env-example
src/: config.rs  handler.rs  lib.rs  main.rs  model.rs
